// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fieldFactory Creates a checkbox fieldset 1`] = `
<fieldset
  className="caldera-fieldset caldera-fieldset-checkboxes"
>
  <legend>
    Checkbox Field Set Label
  </legend>
  <div
    className="components-base-control"
  >
    <div
      className="components-base-control__field"
    >
      <input
        aria-describedby={undefined}
        checked={true}
        className="components-checkbox-control__input"
        id="opt-1"
        onBlur={[Function]}
        onChange={[Function]}
        type="checkbox"
        value="1"
      />
      <label
        className="components-checkbox-control__label"
        htmlFor="inspector-checkbox-control-4"
      >
        One
      </label>
    </div>
  </div>
  <div
    className="components-base-control"
  >
    <div
      className="components-base-control__field"
    >
      <input
        aria-describedby="inspector-checkbox-control-5__help"
        checked={true}
        className="components-checkbox-control__input"
        id="opt-2"
        onBlur={[Function]}
        onChange={[Function]}
        type="checkbox"
        value="1"
      />
      <label
        className="components-checkbox-control__label"
        htmlFor="inspector-checkbox-control-5"
      >
        Two
      </label>
    </div>
    <p
      className="components-base-control__help"
      id="inspector-checkbox-control-5__help"
    >
      The Second Option
    </p>
  </div>
  <div
    className="components-base-control"
  >
    <div
      className="components-base-control__field"
    >
      <input
        aria-describedby={undefined}
        checked={true}
        className="components-checkbox-control__input"
        id="opt-3"
        onBlur={[Function]}
        onChange={[Function]}
        type="checkbox"
        value="1"
      />
      <label
        className="components-checkbox-control__label"
        htmlFor="inspector-checkbox-control-6"
      >
        Three
      </label>
    </div>
  </div>
</fieldset>
`;

exports[`fieldFactory Creates a number field 1`] = `
<div
  className="components-base-control caldera-field caldera-field-number"
>
  <div
    className="components-base-control__field"
  >
    <label
      className="components-base-control__label"
      htmlFor="inspector-text-control-3"
    >
      Number Field Label
    </label>
    <input
      aria-describedby="inspector-text-control-3__help"
      className="components-text-control__input"
      id="numberFieldId"
      max={10}
      min={1}
      onBlur={[Function]}
      onChange={[Function]}
      placeholder={undefined}
      type="number"
      value={3}
    />
  </div>
  <p
    className="components-base-control__help"
    id="inspector-text-control-3__help"
  >
    Number field description
  </p>
</div>
`;

exports[`fieldFactory Creates a radio field 1`] = `
<div
  className="components-base-control caldera-field caldera-field-radio components-radio-control"
>
  <div
    className="components-base-control__field"
  >
    <label
      className="components-base-control__label"
      htmlFor="inspector-radio-control-0"
    >
      Radio Field Label
    </label>
    <div
      className="components-radio-control__option"
    >
      <input
        aria-describedby="inspector-radio-control-0__help"
        checked={false}
        className="components-radio-control__input"
        id="inspector-radio-control-0-0"
        name="inspector-radio-control-0"
        onChange={[Function]}
        type="radio"
        value={0}
      />
      <label
        htmlFor="inspector-radio-control-0-0"
      >
        Zero
      </label>
    </div>
    <div
      className="components-radio-control__option"
    >
      <input
        aria-describedby="inspector-radio-control-0__help"
        checked={true}
        className="components-radio-control__input"
        id="inspector-radio-control-0-1"
        name="inspector-radio-control-0"
        onChange={[Function]}
        type="radio"
        value={1}
      />
      <label
        htmlFor="inspector-radio-control-0-1"
      >
        One
      </label>
    </div>
    <div
      className="components-radio-control__option"
    >
      <input
        aria-describedby="inspector-radio-control-0__help"
        checked={false}
        className="components-radio-control__input"
        id="inspector-radio-control-0-2"
        name="inspector-radio-control-0"
        onChange={[Function]}
        type="radio"
        value={2}
      />
      <label
        htmlFor="inspector-radio-control-0-2"
      >
        Two
      </label>
    </div>
  </div>
  <p
    className="components-base-control__help"
    id="inspector-radio-control-0__help"
  >
    Radio field description
  </p>
</div>
`;

exports[`fieldFactory Creates a text field 1`] = `
<div
  className="components-base-control caldera-field caldera-field-text"
>
  <div
    className="components-base-control__field"
  >
    <label
      className="components-base-control__label"
      htmlFor="inspector-text-control-0"
    >
      First Name
    </label>
    <input
      aria-describedby="inspector-text-control-0__help"
      className="components-text-control__input"
      id="firstName"
      onBlur={[Function]}
      onChange={[Function]}
      placeholder={undefined}
      type="text"
      value="roy"
    />
  </div>
  <p
    className="components-base-control__help"
    id="inspector-text-control-0__help"
  >
    your first name
  </p>
</div>
`;

exports[`fieldFactory Creates an autocomplete field 1`] = `
<div
  className="components-base-control"
>
  <div
    className="components-base-control__field"
  >
    <label
      className="components-base-control__label"
      htmlFor="autoComplete1"
    >
      Options
    </label>
    <div
      className="components-form-token-field"
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      tabIndex="-1"
    >
      <label
        className="components-form-token-field__label"
        htmlFor="components-form-token-input-0"
      >
        Add item
      </label>
      <div
        className="caldera-field caldera-field-autocomplete components-form-token-field__input-container"
        onMouseDown={[Function]}
        onTouchStart={[Function]}
        tabIndex="-1"
      >
        <span
          className="components-form-token-field__token"
          onMouseEnter={undefined}
          onMouseLeave={undefined}
          title={undefined}
        >
          <span
            className="components-form-token-field__token-text"
            id="components-form-token-field__token-text-0"
          >
            <span
              className="screen-reader-text"
            >
              One (1 of 2)
            </span>
            <span
              aria-hidden="true"
            >
              One
            </span>
          </span>
          <button
            aria-describedby="components-form-token-field__token-text-0"
            aria-label="Remove item"
            className="components-button components-icon-button components-form-token-field__remove-token"
            disabled={undefined}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            type="button"
          >
            <svg
              aria-hidden="true"
              className="dashicon dashicons-dismiss"
              focusable="false"
              height={20}
              role="img"
              viewBox="0 0 20 20"
              width={20}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M10 2c4.42 0 8 3.58 8 8s-3.58 8-8 8-8-3.58-8-8 3.58-8 8-8zm5 11l-3-3 3-3-2-2-3 3-3-3-2 2 3 3-3 3 2 2 3-3 3 3z"
              />
            </svg>
          </button>
        </span>
        <span
          className="components-form-token-field__token"
          onMouseEnter={undefined}
          onMouseLeave={undefined}
          title={undefined}
        >
          <span
            className="components-form-token-field__token-text"
            id="components-form-token-field__token-text-1"
          >
            <span
              className="screen-reader-text"
            >
              Three (2 of 2)
            </span>
            <span
              aria-hidden="true"
            >
              Three
            </span>
          </span>
          <button
            aria-describedby="components-form-token-field__token-text-1"
            aria-label="Remove item"
            className="components-button components-icon-button components-form-token-field__remove-token"
            disabled={undefined}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            type="button"
          >
            <svg
              aria-hidden="true"
              className="dashicon dashicons-dismiss"
              focusable="false"
              height={20}
              role="img"
              viewBox="0 0 20 20"
              width={20}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M10 2c4.42 0 8 3.58 8 8s-3.58 8-8 8-8-3.58-8-8 3.58-8 8-8zm5 11l-3-3 3-3-2-2-3 3-3-3-2 2 3 3-3 3 2 2 3-3 3 3z"
              />
            </svg>
          </button>
        </span>
        <input
          aria-activedescendant={undefined}
          aria-autocomplete="list"
          aria-describedby="components-form-token-suggestions-howto-0"
          aria-expanded={false}
          aria-owns={undefined}
          autoCapitalize={undefined}
          autoComplete={undefined}
          className="components-form-token-field__input"
          disabled={false}
          id="components-form-token-input-0"
          onBlur={[Function]}
          onChange={[Function]}
          role="combobox"
          size={1}
          type="text"
          value=""
        />
      </div>
      <div
        className="screen-reader-text"
        id="components-form-token-suggestions-howto-0"
      >
        Separate with commas
      </div>
    </div>
  </div>
  <p
    className="components-base-control__help"
    id="autoComplete1__help"
  >
    Help text
  </p>
</div>
`;

exports[`fieldFactory Creates an checkbox field field 1`] = `
<div
  className="components-base-control"
>
  <div
    className="components-base-control__field"
  >
    <input
      aria-describedby="inspector-checkbox-control-0__help"
      checked={true}
      className="components-checkbox-control__input"
      id="checkboxFieldLabel"
      onBlur={[Function]}
      onChange={[Function]}
      type="checkbox"
      value="1"
    />
    <label
      className="components-checkbox-control__label"
      htmlFor="inspector-checkbox-control-0"
    >
      Checkbox Labe
    </label>
  </div>
  <p
    className="components-base-control__help"
    id="inspector-checkbox-control-0__help"
  >
    Checkbox field description
  </p>
</div>
`;

exports[`fieldFactory Creates an checkbox field set 1`] = `
<fieldset
  className="caldera-fieldset caldera-fieldset-checkboxes"
>
  <legend>
    Checkbox Field Set Label
  </legend>
  <div
    className="components-base-control"
  >
    <div
      className="components-base-control__field"
    >
      <input
        aria-describedby={undefined}
        checked={true}
        className="components-checkbox-control__input"
        id="opt-1"
        onBlur={[Function]}
        onChange={[Function]}
        type="checkbox"
        value="1"
      />
      <label
        className="components-checkbox-control__label"
        htmlFor="inspector-checkbox-control-1"
      >
        One
      </label>
    </div>
  </div>
  <div
    className="components-base-control"
  >
    <div
      className="components-base-control__field"
    >
      <input
        aria-describedby="inspector-checkbox-control-2__help"
        checked={true}
        className="components-checkbox-control__input"
        id="opt-2"
        onBlur={[Function]}
        onChange={[Function]}
        type="checkbox"
        value="1"
      />
      <label
        className="components-checkbox-control__label"
        htmlFor="inspector-checkbox-control-2"
      >
        Two
      </label>
    </div>
    <p
      className="components-base-control__help"
      id="inspector-checkbox-control-2__help"
    >
      The Second Option
    </p>
  </div>
  <div
    className="components-base-control"
  >
    <div
      className="components-base-control__field"
    >
      <input
        aria-describedby={undefined}
        checked={true}
        className="components-checkbox-control__input"
        id="opt-3"
        onBlur={[Function]}
        onChange={[Function]}
        type="checkbox"
        value="1"
      />
      <label
        className="components-checkbox-control__label"
        htmlFor="inspector-checkbox-control-3"
      >
        Three
      </label>
    </div>
  </div>
</fieldset>
`;

exports[`fieldFactory Creates an email field 1`] = `
<div
  className="components-base-control caldera-field caldera-field-email"
>
  <div
    className="components-base-control__field"
  >
    <label
      className="components-base-control__label"
      htmlFor="inspector-text-control-4"
    >
      Email Field Label
    </label>
    <input
      aria-describedby="inspector-text-control-4__help"
      className="components-text-control__input"
      id="emailFieldId"
      multiple={true}
      onBlur={[Function]}
      onChange={[Function]}
      placeholder={undefined}
      type="email"
      value="emai@email.com"
    />
  </div>
  <p
    className="components-base-control__help"
    id="inspector-text-control-4__help"
  >
    Email field description
  </p>
</div>
`;

exports[`fieldFactory Creates an fields-autocomplete field 1`] = `
<div
  className="components-base-control"
>
  <div
    className="components-base-control__field"
  >
    <label
      className="components-base-control__label"
      htmlFor="firstName"
    >
      First Name
    </label>
    <div
      className="components-form-token-field"
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      tabIndex="-1"
    >
      <label
        className="components-form-token-field__label"
        htmlFor="components-form-token-input-1"
      >
        Add item
      </label>
      <div
        className="caldera-field caldera-field-autocomplete components-form-token-field__input-container"
        onMouseDown={[Function]}
        onTouchStart={[Function]}
        tabIndex="-1"
      >
        <span
          className="components-form-token-field__token"
          onMouseEnter={undefined}
          onMouseLeave={undefined}
          title={undefined}
        >
          <span
            className="components-form-token-field__token-text"
            id="components-form-token-field__token-text-2"
          >
            <span
              className="screen-reader-text"
            >
              r (1 of 3)
            </span>
            <span
              aria-hidden="true"
            >
              r
            </span>
          </span>
          <button
            aria-describedby="components-form-token-field__token-text-2"
            aria-label="Remove item"
            className="components-button components-icon-button components-form-token-field__remove-token"
            disabled={undefined}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            type="button"
          >
            <svg
              aria-hidden="true"
              className="dashicon dashicons-dismiss"
              focusable="false"
              height={20}
              role="img"
              viewBox="0 0 20 20"
              width={20}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M10 2c4.42 0 8 3.58 8 8s-3.58 8-8 8-8-3.58-8-8 3.58-8 8-8zm5 11l-3-3 3-3-2-2-3 3-3-3-2 2 3 3-3 3 2 2 3-3 3 3z"
              />
            </svg>
          </button>
        </span>
        <span
          className="components-form-token-field__token"
          onMouseEnter={undefined}
          onMouseLeave={undefined}
          title={undefined}
        >
          <span
            className="components-form-token-field__token-text"
            id="components-form-token-field__token-text-3"
          >
            <span
              className="screen-reader-text"
            >
              o (2 of 3)
            </span>
            <span
              aria-hidden="true"
            >
              o
            </span>
          </span>
          <button
            aria-describedby="components-form-token-field__token-text-3"
            aria-label="Remove item"
            className="components-button components-icon-button components-form-token-field__remove-token"
            disabled={undefined}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            type="button"
          >
            <svg
              aria-hidden="true"
              className="dashicon dashicons-dismiss"
              focusable="false"
              height={20}
              role="img"
              viewBox="0 0 20 20"
              width={20}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M10 2c4.42 0 8 3.58 8 8s-3.58 8-8 8-8-3.58-8-8 3.58-8 8-8zm5 11l-3-3 3-3-2-2-3 3-3-3-2 2 3 3-3 3 2 2 3-3 3 3z"
              />
            </svg>
          </button>
        </span>
        <span
          className="components-form-token-field__token"
          onMouseEnter={undefined}
          onMouseLeave={undefined}
          title={undefined}
        >
          <span
            className="components-form-token-field__token-text"
            id="components-form-token-field__token-text-4"
          >
            <span
              className="screen-reader-text"
            >
              y (3 of 3)
            </span>
            <span
              aria-hidden="true"
            >
              y
            </span>
          </span>
          <button
            aria-describedby="components-form-token-field__token-text-4"
            aria-label="Remove item"
            className="components-button components-icon-button components-form-token-field__remove-token"
            disabled={undefined}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            type="button"
          >
            <svg
              aria-hidden="true"
              className="dashicon dashicons-dismiss"
              focusable="false"
              height={20}
              role="img"
              viewBox="0 0 20 20"
              width={20}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M10 2c4.42 0 8 3.58 8 8s-3.58 8-8 8-8-3.58-8-8 3.58-8 8-8zm5 11l-3-3 3-3-2-2-3 3-3-3-2 2 3 3-3 3 2 2 3-3 3 3z"
              />
            </svg>
          </button>
        </span>
        <input
          aria-activedescendant={undefined}
          aria-autocomplete="list"
          aria-describedby="components-form-token-suggestions-howto-1"
          aria-expanded={false}
          aria-owns={undefined}
          autoCapitalize={undefined}
          autoComplete={undefined}
          className="components-form-token-field__input"
          disabled={false}
          id="components-form-token-input-1"
          onBlur={[Function]}
          onChange={[Function]}
          role="combobox"
          size={1}
          type="text"
          value=""
        />
      </div>
      <div
        className="screen-reader-text"
        id="components-form-token-suggestions-howto-1"
      >
        Separate with commas
      </div>
    </div>
  </div>
  <p
    className="components-base-control__help"
    id="firstName__help"
  >
    your first name
  </p>
</div>
`;

exports[`fieldFactory Creates an select field 1`] = `
<div
  className="components-base-control caldera-field caldera-field-select"
>
  <div
    className="components-base-control__field"
  >
    <label
      className="components-base-control__label"
      htmlFor="inspector-select-control-0"
    >
      Select Field Label
    </label>
    <select
      aria-describedby="inspector-select-control-0__help"
      className="components-select-control__input"
      id="selectFieldId"
      multiple={false}
      onChange={[Function]}
      value={1}
    >
      <option
        value={0}
      >
        Zero
      </option>
      <option
        value={1}
      >
        One
      </option>
      <option
        value={2}
      >
        Two
      </option>
    </select>
  </div>
  <p
    className="components-base-control__help"
    id="inspector-select-control-0__help"
  >
    Select field description
  </p>
</div>
`;

exports[`fieldFactory Creates an select field identified as dropdown 1`] = `
<div
  className="components-base-control caldera-field caldera-field-select"
>
  <div
    className="components-base-control__field"
  >
    <label
      className="components-base-control__label"
      htmlFor="inspector-select-control-1"
    >
      Select Field Label
    </label>
    <select
      aria-describedby="inspector-select-control-1__help"
      className="components-select-control__input"
      id="selectFieldId"
      multiple={false}
      onChange={[Function]}
      value={1}
    >
      <option
        value={0}
      >
        Zero
      </option>
      <option
        value={1}
      >
        One
      </option>
      <option
        value={2}
      >
        Two
      </option>
    </select>
  </div>
  <p
    className="components-base-control__help"
    id="inspector-select-control-1__help"
  >
    Select field description
  </p>
</div>
`;

exports[`fieldFactory should create textarea 1`] = `
<div
  className="components-base-control"
>
  <div
    className="components-base-control__field"
  >
    <label
      className="components-base-control__label"
      htmlFor="inspector-textarea-control-0"
    >
      Your message
    </label>
    <textarea
      aria-describedby="inspector-textarea-control-0__help"
      className="components-textarea-control__input"
      cols={8}
      id="textArea1"
      maxLength={500}
      minlength={10}
      onBlur={[Function]}
      onChange={[Function]}
      required={true}
      rows={5}
      value="The content of text area"
    />
  </div>
  <p
    className="components-base-control__help"
    id="inspector-textarea-control-0__help"
  >
    your first name
  </p>
</div>
`;

exports[`fieldFactory should create toggle 1`] = `
<div
  className="components-base-control"
>
  <div
    className="components-base-control__field"
  >
    <label
      className="components-base-control__label"
      htmlFor="toggleFieldLabel"
    >
      Toggle Label
    </label>
    <div
      className="components-base-control components-toggle-control"
    >
      <div
        className="components-base-control__field"
      >
        <span
          className="components-form-toggle is-checked"
        >
          <input
            aria-describedby={undefined}
            checked={true}
            className="components-form-toggle__input"
            id="inspector-toggle-control-0"
            onChange={[Function]}
            type="checkbox"
          />
          <span
            className="components-form-toggle__track"
          />
          <span
            className="components-form-toggle__thumb"
          />
          <svg
            aria-hidden="true"
            className="components-form-toggle__on"
            focusable="false"
            height="6"
            role="img"
            viewBox="0 0 2 6"
            width="2"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h2v6H0z"
            />
          </svg>
        </span>
        <label
          className="components-toggle-control__label"
          htmlFor="inspector-toggle-control-0"
        />
      </div>
    </div>
  </div>
  <p
    className="components-base-control__help"
    id="toggleFieldLabel__help"
  >
    Toggle field description
  </p>
</div>
`;
